🔨 Try using the -i option

--- a/.github/workflows/build-sphinx-thesis.yml
+++ b/.github/workflows/build-sphinx-thesis.yml
@@ -77,13 +77,15 @@ jobs:
         run: |
           source $pythonLocation/activate
           make latex
-      - name: "Remove numbering from subsubsections and lower headings"
+      - name: "Remove numbering from subsubsections"
         working-directory: thesis/build/latex/
-        # Doesn't work by using < and >. I have no idea why.
-        run: |
-          cat progettazioneesviluppodisophonapplicativocloudasupportodellaricerca.tex | sed -E s/\subsubsection[{]/\subsubsection*{/g | tee progettazioneesviluppodisophonapplicativocloudasupportodellaricerca.tex
-          cat progettazioneesviluppodisophonapplicativocloudasupportodellaricerca.tex | sed -E s/\paragraph[{]/\paragraph*{/g | tee progettazioneesviluppodisophonapplicativocloudasupportodellaricerca.tex
-          cat progettazioneesviluppodisophonapplicativocloudasupportodellaricerca.tex | sed -E s/\subparagraph[{]/\subparagraph*{/g | tee progettazioneesviluppodisophonapplicativocloudasupportodellaricerca.tex
+        run: sed --regexp-extended --in-place s/\subsubsection[{]/\subsubsection*{/g progettazioneesviluppodisophonapplicativocloudasupportodellaricerca.tex
+      - name: "Remove numbering from paragraphs"
+        working-directory: thesis/build/latex/
+        run: sed --regexp-extended --in-place s/\paragraph[{]/\paragraph*{/g progettazioneesviluppodisophonapplicativocloudasupportodellaricerca.tex
+      - name: "Remove numbering from subparagraphs"
+        working-directory: thesis/build/latex/
+        run: sed --regexp-extended --in-place s/\subparagraph[{]/\subparagraph*{/g progettazioneesviluppodisophonapplicativocloudasupportodellaricerca.tex
       - name: "Build PDF document with Latexmk"
         working-directory: thesis/build/latex/
         run: make
