--- a/.github/workflows/build-sphinx-thesis.yml
+++ b/.github/workflows/build-sphinx-thesis.yml
@@ -91,13 +91,13 @@ jobs:
         run: sed --regexp-extended --in-place 's/[\]subparagraph[{]/\subparagraph*{/g' progettazioneesviluppodisophonapplicativocloudasupportodellaricerca.tex
       - name: "Rename genindex to 'Indice analitico'"
         working-directory: thesis/build/latex/
-        run: sed --regexp-extended --in-place 's/[{][\]indexname[}][{]Indice[}]/{\indexname}{Indice analitico}/g'
+        run: sed --regexp-extended --in-place 's/[{][\]indexname[}][{]Indice[}]/{\indexname}{Indice analitico}/g' progettazioneesviluppodisophonapplicativocloudasupportodellaricerca.tex
       - name: "Remove modindex"
         working-directory: thesis/build/latex/
-        run: sed --regexp-extended --in-place 's/[\]renewcommand[{][\]indexname[}][{]Indice del modulo Python[}].*[\]end[{]sphinxtheindex[}]//gs'
+        run: sed --regexp-extended --in-place 's/[\]renewcommand[{][\]indexname[}][{]Indice del modulo Python[}].*[\]end[{]sphinxtheindex[}]//gs' progettazioneesviluppodisophonapplicativocloudasupportodellaricerca.tex
       - name: "Remove routing table"
         working-directory: thesis/build/latex/
-        run: sed --regexp-extended --in-place 's/[\]renewcommand[{][\]indexname[}][{]HTTP Routing Table[}].*[\]end[{]sphinxtheindex[}]//gs'
+        run: sed --regexp-extended --in-place 's/[\]renewcommand[{][\]indexname[}][{]HTTP Routing Table[}].*[\]end[{]sphinxtheindex[}]//gs' progettazioneesviluppodisophonapplicativocloudasupportodellaricerca.tex
       - name: "Build PDF document with Latexmk"
         working-directory: thesis/build/latex/
         run: make
