--- a/.github/workflows/build-sphinx-thesis.yml
+++ b/.github/workflows/build-sphinx-thesis.yml
@@ -89,6 +89,9 @@ jobs:
       - name: "Remove numbering from subparagraphs"
         working-directory: thesis/build/latex/
         run: sed --regexp-extended --in-place 's/[\]subparagraph[{]/\subparagraph*{/g' progettazioneesviluppodisophonapplicativocloudasupportodellaricerca.tex
+      - name: "Add appendix macro"
+        working-directory: thesis/build/latex/
+        run: sed --regexp-extended --in-place 's/[\]chapter[{]Installazione di Sophon[}]/\appendix\chapter{Installazione di Sophon}/g' progettazioneesviluppodisophonapplicativocloudasupportodellaricerca.tex
       - name: "Build PDF document with Latexmk"
         working-directory: thesis/build/latex/
         run: make
