Trigger a new github actions build

--- a/thesis/Makefile
+++ b/thesis/Makefile
@@ -21,3 +21,5 @@ livehtml:
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
 %: Makefile
 	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS)
+
+# remake
